Fixed z-index in aside & section

--- a/src/stylesheets/Lungo.layout.article.less
+++ b/src/stylesheets/Lungo.layout.article.less
@@ -11,9 +11,9 @@
 @import "constants.less";
 
 article {
-    //position: absolute;
+    // @todo: section position absolute or FIXED
+    // position: absolute;
     position: fixed;
-    // width: 100% !important;
     width: inherit;
     height: auto;
     top: 0;
@@ -35,10 +35,6 @@ article {
         font-size: 0.9em;
         font-weight: normal;
         line-height: 1.4em;
-    }
-
-    & > .loading {
-        //margin-top: 10%;
     }
 }
 
